--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="script.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
   </head>
 
